incremental update analysis_visualizations1_dan notebook

--- a/Notebooks/analysis_visualization1_dan.ipynb
+++ b/Notebooks/analysis_visualization1_dan.ipynb
@@ -2097,7 +2097,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Prices/SqFt per zip - Zip toggle"
+    "#### Prices/SqFt per zip - Toggle by Zip"
    ]
   },
   {
@@ -2406,18 +2406,111 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Top median price/sqft cum_prod of pct_change"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#filtered_median_list_sqft_df_pct_change.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# calc cumprod of price/sqft pct change over time\n",
+    "filtered_price_sqft_pctchg_cumprod = (1 + filtered_median_list_sqft_df_pct_change).cumprod() - 1\n",
+    "#filtered_price_sqft_pctchg_cumprod.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sort highest to lowest and get top 10 highest\n",
+    "top10_cum_increase_price_sqft = filtered_price_sqft_pctchg_cumprod.iloc[-1].sort_values(ascending=False)\n",
+    "top10_cum_increase_price_sqft = top10_cum_increase_price_sqft[0:10]\n",
+    "#top10_cum_increase_price_sqft"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.holoviews_exec.v0+json": "",
+      "text/html": [
+       "<div id='20679'>\n",
+       "\n",
+       "\n",
+       "\n",
+       "\n",
+       "\n",
+       "  <div class=\"bk-root\" id=\"07329a01-876f-4043-9c26-6cc0012de142\" data-root-id=\"20679\"></div>\n",
+       "</div>\n",
+       "<script type=\"application/javascript\">(function(root) {\n",
+       "  function embed_document(root) {\n",
+       "  var docs_json = {\"26251bc9-0818-464b-963d-399b8cef3acf\":{\"roots\":{\"references\":[{\"attributes\":{\"factors\":[\"77026\",\"77011\",\"77027\",\"77020\",\"77023\",\"77019\",\"77021\",\"77003\",\"77098\",\"77007\"],\"tags\":[[[\"index\",\"index\",null]]]},\"id\":\"20681\",\"type\":\"FactorRange\"},{\"attributes\":{\"bottom_units\":\"screen\",\"fill_alpha\":0.5,\"fill_color\":\"lightgrey\",\"left_units\":\"screen\",\"level\":\"overlay\",\"line_alpha\":1.0,\"line_color\":\"black\",\"line_dash\":[4,4],\"line_width\":2,\"right_units\":\"screen\",\"top_units\":\"screen\"},\"id\":\"20705\",\"type\":\"BoxAnnotation\"},{\"attributes\":{\"axis\":{\"id\":\"20693\"},\"grid_line_color\":null,\"ticker\":null},\"id\":\"20695\",\"type\":\"Grid\"},{\"attributes\":{},\"id\":\"20702\",\"type\":\"WheelZoomTool\"},{\"attributes\":{\"end\":102.8626914685299,\"reset_end\":102.8626914685299,\"reset_start\":0.0,\"tags\":[[[\"2020-06\",\"2020-06\",null]]]},\"id\":\"20682\",\"type\":\"Range1d\"},{\"attributes\":{},\"id\":\"20694\",\"type\":\"CategoricalTicker\"},{\"attributes\":{\"axis_label\":\"Percent Increase in Price/SqFt\",\"bounds\":\"auto\",\"formatter\":{\"id\":\"20721\"},\"major_label_orientation\":\"horizontal\",\"ticker\":{\"id\":\"20697\"}},\"id\":\"20696\",\"type\":\"LinearAxis\"},{\"attributes\":{},\"id\":\"20723\",\"type\":\"CategoricalTickFormatter\"},{\"attributes\":{\"margin\":[5,5,5,5],\"name\":\"HSpacer73642\",\"sizing_mode\":\"stretch_width\"},\"id\":\"20742\",\"type\":\"Spacer\"},{\"attributes\":{},\"id\":\"20697\",\"type\":\"BasicTicker\"},{\"attributes\":{\"callback\":null,\"renderers\":[{\"id\":\"20719\"}],\"tags\":[\"hv_created\"],\"tooltips\":[[\"index\",\"@{index}\"],[\"2020-06\",\"@{A_2020_hyphen_minus_06}\"]]},\"id\":\"20683\",\"type\":\"HoverTool\"},{\"attributes\":{\"axis\":{\"id\":\"20696\"},\"dimension\":1,\"grid_line_color\":null,\"ticker\":null},\"id\":\"20699\",\"type\":\"Grid\"},{\"attributes\":{},\"id\":\"20733\",\"type\":\"UnionRenderers\"},{\"attributes\":{\"source\":{\"id\":\"20713\"}},\"id\":\"20720\",\"type\":\"CDSView\"},{\"attributes\":{\"data_source\":{\"id\":\"20713\"},\"glyph\":{\"id\":\"20716\"},\"hover_glyph\":null,\"muted_glyph\":{\"id\":\"20718\"},\"nonselection_glyph\":{\"id\":\"20717\"},\"selection_glyph\":null,\"view\":{\"id\":\"20720\"}},\"id\":\"20719\",\"type\":\"GlyphRenderer\"},{\"attributes\":{\"children\":[{\"id\":\"20680\"},{\"id\":\"20684\"},{\"id\":\"20742\"}],\"margin\":[0,0,0,0],\"name\":\"Row73637\",\"tags\":[\"embedded\"]},\"id\":\"20679\",\"type\":\"Row\"},{\"attributes\":{},\"id\":\"20700\",\"type\":\"SaveTool\"},{\"attributes\":{},\"id\":\"20704\",\"type\":\"ResetTool\"},{\"attributes\":{\"align\":null,\"below\":[{\"id\":\"20693\"}],\"center\":[{\"id\":\"20695\"},{\"id\":\"20699\"}],\"left\":[{\"id\":\"20696\"}],\"margin\":null,\"min_border_bottom\":10,\"min_border_left\":10,\"min_border_right\":10,\"min_border_top\":10,\"plot_height\":400,\"plot_width\":700,\"renderers\":[{\"id\":\"20719\"}],\"sizing_mode\":\"fixed\",\"title\":{\"id\":\"20685\"},\"toolbar\":{\"id\":\"20706\"},\"x_range\":{\"id\":\"20681\"},\"x_scale\":{\"id\":\"20689\"},\"y_range\":{\"id\":\"20682\"},\"y_scale\":{\"id\":\"20691\"}},\"id\":\"20684\",\"subtype\":\"Figure\",\"type\":\"Plot\"},{\"attributes\":{\"format\":\"%.2f\"},\"id\":\"20721\",\"type\":\"PrintfTickFormatter\"},{\"attributes\":{},\"id\":\"20689\",\"type\":\"CategoricalScale\"},{\"attributes\":{\"fill_alpha\":{\"value\":0.1},\"fill_color\":{\"value\":\"#1f77b3\"},\"line_alpha\":{\"value\":0.1},\"top\":{\"field\":\"A_2020_hyphen_minus_06\"},\"width\":{\"value\":0.8},\"x\":{\"field\":\"index\"}},\"id\":\"20717\",\"type\":\"VBar\"},{\"attributes\":{\"overlay\":{\"id\":\"20705\"}},\"id\":\"20703\",\"type\":\"BoxZoomTool\"},{\"attributes\":{\"fill_color\":{\"value\":\"#1f77b3\"},\"top\":{\"field\":\"A_2020_hyphen_minus_06\"},\"width\":{\"value\":0.8},\"x\":{\"field\":\"index\"}},\"id\":\"20716\",\"type\":\"VBar\"},{\"attributes\":{\"data\":{\"A_2020_hyphen_minus_06\":{\"__ndarray__\":\"frzGp9J1V0BdxfsmiOZFQLgxhZLlMkFAhHxTttQELkDE2YMv464qQKh/JuMKRyVAEuCu/QeLIUDM577VSgwgQMBhvGAhqxJAWD+N2Lr9DEA=\",\"dtype\":\"float64\",\"order\":\"little\",\"shape\":[10]},\"index\":[\"77026\",\"77011\",\"77027\",\"77020\",\"77023\",\"77019\",\"77021\",\"77003\",\"77098\",\"77007\"]},\"selected\":{\"id\":\"20714\"},\"selection_policy\":{\"id\":\"20733\"}},\"id\":\"20713\",\"type\":\"ColumnDataSource\"},{\"attributes\":{\"text\":\"Top 10 Zip by Cumulative Percent Increase in Price/SqFt\",\"text_color\":{\"value\":\"black\"},\"text_font_size\":{\"value\":\"12pt\"}},\"id\":\"20685\",\"type\":\"Title\"},{\"attributes\":{\"active_drag\":\"auto\",\"active_inspect\":\"auto\",\"active_multi\":null,\"active_scroll\":\"auto\",\"active_tap\":\"auto\",\"tools\":[{\"id\":\"20683\"},{\"id\":\"20700\"},{\"id\":\"20701\"},{\"id\":\"20702\"},{\"id\":\"20703\"},{\"id\":\"20704\"}]},\"id\":\"20706\",\"type\":\"Toolbar\"},{\"attributes\":{\"margin\":[5,5,5,5],\"name\":\"HSpacer73641\",\"sizing_mode\":\"stretch_width\"},\"id\":\"20680\",\"type\":\"Spacer\"},{\"attributes\":{},\"id\":\"20691\",\"type\":\"LinearScale\"},{\"attributes\":{},\"id\":\"20714\",\"type\":\"Selection\"},{\"attributes\":{\"fill_alpha\":{\"value\":0.2},\"fill_color\":{\"value\":\"#1f77b3\"},\"line_alpha\":{\"value\":0.2},\"top\":{\"field\":\"A_2020_hyphen_minus_06\"},\"width\":{\"value\":0.8},\"x\":{\"field\":\"index\"}},\"id\":\"20718\",\"type\":\"VBar\"},{\"attributes\":{},\"id\":\"20701\",\"type\":\"PanTool\"},{\"attributes\":{\"axis_label\":\"Zip Code\",\"bounds\":\"auto\",\"formatter\":{\"id\":\"20723\"},\"major_label_orientation\":1.5707963267948966,\"ticker\":{\"id\":\"20694\"}},\"id\":\"20693\",\"type\":\"CategoricalAxis\"}],\"root_ids\":[\"20679\"]},\"title\":\"Bokeh Application\",\"version\":\"2.1.1\"}};\n",
+       "  var render_items = [{\"docid\":\"26251bc9-0818-464b-963d-399b8cef3acf\",\"root_ids\":[\"20679\"],\"roots\":{\"20679\":\"07329a01-876f-4043-9c26-6cc0012de142\"}}];\n",
+       "  root.Bokeh.embed.embed_items_notebook(docs_json, render_items);\n",
+       "  }\n",
+       "if (root.Bokeh !== undefined) {\n",
+       "    embed_document(root);\n",
+       "  } else {\n",
+       "    var attempts = 0;\n",
+       "    var timer = setInterval(function(root) {\n",
+       "      if (root.Bokeh !== undefined) {\n",
+       "        clearInterval(timer);\n",
+       "        embed_document(root);\n",
+       "      } else if (document.readyState == \"complete\") {\n",
+       "        attempts++;\n",
+       "        if (attempts > 100) {\n",
+       "          clearInterval(timer);\n",
+       "          console.log(\"Bokeh: ERROR: Unable to run BokehJS code because BokehJS library is missing\");\n",
+       "        }\n",
+       "      }\n",
+       "    }, 10, root)\n",
+       "  }\n",
+       "})(window);</script>"
+      ],
+      "text/plain": [
+       ":Bars   [index]   (2020-06)"
+      ]
+     },
+     "execution_count": 211,
+     "metadata": {
+      "application/vnd.holoviews_exec.v0+json": {
+       "id": "20679"
+      }
+     },
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# plot_top10_cum_increase_price_sqft = top10_cum_increase_price_sqft.hvplot.bar(x='neighborhood',y='sale_price_sqr_foot',rot=90).opts(\n",
+    "plot_top10_cum_increase_price_sqft = (top10_cum_increase_price_sqft * 100).hvplot.bar(rot=90).opts(\n",
+    "    title=\"Top 10 Zip by Cumulative Percent Increase in Price/SqFt\",\n",
+    "    height=400,\n",
+    "    xlabel='Zip Code',\n",
+    "    ylabel='Percent Increase in Price/SqFt',\n",
+    "    yformatter=\"%.2f\"\n",
+    ")\n",
+    "\n",
+    "plot_top10_cum_increase_price_sqft"
+   ]
   },
   {
    "cell_type": "code",
