updated cop_code with dict to hold lots of info we can use to graph or call back

--- a/Notebooks/trail&error3pyviz_Vu.ipynb
+++ b/Notebooks/trail&error3pyviz_Vu.ipynb
@@ -1,15 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Importing stuff"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,21 +13,12 @@
     "import pandas as pd\n",
     "import datetime as dt\n",
     "from pathlib import Path\n",
-    "import operator\n",
+    "\n",
     "import numpy as np\n",
-    "import collections\n",
-    "from collections import Counter\n",
     "# %matplotlib inline\n",
     "# import matplotlib\n",
     "# import matplotlib.pyplot as plt\n",
     "from sklearn.linear_model import LinearRegression"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Importing API data that will be the crtieria for which zip codes we're looking at."
    ]
   },
   {
@@ -760,28 +744,12 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "zip_code_df = pd.DataFrame()\n",
     "zip_code_df['zip_code']  = zip_code\n",
     "zip_code_df['City']  = city"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Importing function that will be used to filter datafiles"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## must set the function = to a new dataframe or it won't save!!"
    ]
   },
   {
@@ -795,36 +763,13 @@
     "        if zip_code_numbers in df:\n",
     "            data_adding = df.loc[:, zip_code_numbers]\n",
     "            new_dataframe = new_dataframe.append(data_adding)\n",
-    "    return new_dataframe    "
+    "    return new_dataframe  "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "## example\n",
-    "## random_dataframe = pd.DataFrame()\n",
-    "\n",
-    "## random_dataframe = filter_zip_code(zip_codes_list, df, random_dataframe)\n",
-    "\n",
-    "## random_dataframe should be a dataframe with all the zip codes we're looking at"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Importing tax data and creating the dataframes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "scrolled": true
-   },
    "outputs": [],
    "source": [
     "# importing the data\n",
@@ -878,24 +823,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Importing permit data and creating the dataframes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "scrolled": true
-   },
    "outputs": [],
    "source": [
     "permits_filepath = Path(\"../resources/dan/Permit_Data/permit_data.csv\")\n",
@@ -925,21 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Importing Texas Pricing Data and creating the dataframes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,35 +888,12 @@
     "\n",
     "average_listing_price_df = pd.pivot_table(pricing_data_df, index='date', columns = 'postal_code', values = 'average_listing_price')\n",
     "\n",
-    "pending_ratio_df = pd.pivot_table(pricing_data_df, index='date', columns = 'postal_code', values = 'pending_ratio')\n",
-    "\n"
+    "pending_ratio_df = pd.pivot_table(pricing_data_df, index='date', columns = 'postal_code', values = 'pending_ratio')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Creating filtered datasets of the zipcodes we want to look at\n",
-    "# Also filling in all NaN vaules to not delete rows, we can choose to delete if we don't want that zip portrayed."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### starting with the Texas Pricing Data set"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,47 +931,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### now the permits data set"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "filtered_permits_by_zip = pd.DataFrame()\n",
     "filtered_permits_by_zip = filter_zip_code(zip_code, permits_by_zip, filtered_permits_by_zip)\n",
     "filtered_permits_by_zip.fillna(0, inplace = True)\n",
-    "filtered_permits_by_zip = filtered_permits_by_zip.transpose()\n"
+    "filtered_permits_by_zip = filtered_permits_by_zip.transpose()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### finally the tax data set"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1117,54 +981,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Hypothosis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Analysis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# resetting all indexes \n",
-    "\n",
     "# tax data\n",
     "filtered_real_estates_tax_df.reset_index(inplace = True)\n",
     "filtered_charity_tax_df.reset_index(inplace = True)\n",
@@ -1187,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1216,14 +1036,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pending Ratio [77021]\n",
+      "ROI:\n",
+      "[-0.00266863]\n",
+      "Pending Ratio [77030]\n",
+      "ROI:\n",
+      "[-0.02466863]\n",
+      "Average Income Tax [77005]\n",
+      "ROI:\n",
+      "[0.0055603]\n",
+      "Average Listing Price [77023]\n",
+      "ROI:\n",
+      "[0.00706455]\n",
+      "New Listings [77004]\n",
+      "ROI:\n",
+      "[-0.00069256]\n",
+      "Average Mortgage Tax [77046]\n",
+      "ROI:\n",
+      "[-0.01013335]\n",
+      "Average Listing Price [77098]\n",
+      "ROI:\n",
+      "[0.00309937]\n",
+      "Average Charity Tax [77027]\n",
+      "ROI:\n",
+      "[0.00870845]\n",
+      "Number of Permits [77006]\n",
+      "ROI:\n",
+      "[0.0002646]\n",
+      "Average Listing Price [77011]\n",
+      "ROI:\n",
+      "[0.03385541]\n",
+      "New Listings [77003]\n",
+      "ROI:\n",
+      "[0.00190372]\n",
+      "Pending Ratio [77019]\n",
+      "ROI:\n",
+      "[-0.00130119]\n",
+      "Average Charity Tax [77002]\n",
+      "ROI:\n",
+      "[0.00579749]\n",
+      "Average Listing Price [77007]\n",
+      "ROI:\n",
+      "[0.00519829]\n",
+      "Average Listing Price [77020]\n",
+      "ROI:\n",
+      "[0.02705338]\n",
+      "Average Listing Price [77009]\n",
+      "ROI:\n",
+      "[0.00531868]\n",
+      "Average Listing Price [77008]\n",
+      "ROI:\n",
+      "[0.00691096]\n",
+      "Pending Ratio [77026]\n",
+      "ROI:\n",
+      "[0.00462537]\n"
+     ]
+    }
+   ],
    "source": [
+    "# tells you which value has the highest correlation to x\n",
+    "# dict_of_frames = {}\n",
+    "# lr = LinearRegression()\n",
+    "\n",
+    "# for i in dict_of_corr.keys():\n",
+    "#     if i in filtered_median_list_sqft_df and i in filtered_median_list_sqft_df_pct_change and i in filtered_active_listings_df and i in filtered_new_listing_df and i in filtered_average_listing_price_df and i in filtered_pending_ratio_df and i in filtered_permits_by_zip and i in filtered_number_of_returns_df and i in filtered_taxable_income_df and i in filtered_income_tax_df and i in filtered_mortgage_tax_df and i in filtered_charity_tax_df and i in filtered_real_estates_tax_df:\n",
+    "#         dict_of_frames[i] = pd.DataFrame({\n",
+    "# #             'Median Listing Sqft' : filtered_median_list_sqft_df[i],\n",
+    "#             'Median Listing of Sqft Pct Change' : filtered_median_list_sqft_df_pct_change[i], \n",
+    "#             'Active Listings' : filtered_active_listings_df[i], \n",
+    "#             'New Listings' : filtered_new_listing_df[i], \n",
+    "#             'Average Listing Price' : filtered_average_listing_price_df[i],\n",
+    "#             'Pending Ratio' : filtered_pending_ratio_df[i],\n",
+    "#             'Number of Permits' : filtered_permits_by_zip[i],\n",
+    "#             'Number of Tax Returns' : filtered_number_of_returns_df[i],\n",
+    "#             'Average Taxable Income' : filtered_taxable_income_df[i],\n",
+    "#             'Average Income Tax' : filtered_income_tax_df[i],\n",
+    "#             'Average Mortgage Tax' : filtered_mortgage_tax_df[i],\n",
+    "#             'Average Charity Tax' : filtered_charity_tax_df[i],\n",
+    "#             'Average Real Estates Tax' : filtered_real_estates_tax_df[i]\n",
+    "#             })\n",
+    "#     dict_of_frames[i].dropna(inplace=True)\n",
+    "#     max_df = dict_of_corr[i].agg({'Median Listing of Sqft Pct Change' : ['max']})\n",
+    "#     if max_df.values[0][0] == -2:\n",
+    "#         print(f\"Data Set Incomplete: Removing {[i]}\")\n",
+    "#         #del dict_of_frames[i]\n",
+    "#     else:\n",
+    "#         strong_corr = dict_of_corr[i].index[dict_of_corr[i]['Median Listing of Sqft Pct Change'] == max_df.values[0][0]].tolist()\n",
+    "#         print(f\"{strong_corr[0]} {[i]}\")\n",
+    "#         lr.fit(dict_of_frames[i][[strong_corr[0]]], dict_of_frames[i]['Median Listing of Sqft Pct Change'])\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
     "dict_of_frames = {}\n",
     "lr = LinearRegression()\n",
     "dict_of_roi = {}\n",
-    "dict_of_strongest_corr = {}\n",
     "\n",
     "for i in dict_of_corr.keys():\n",
     "    if i in filtered_median_list_sqft_df and i in filtered_median_list_sqft_df_pct_change and i in filtered_active_listings_df and i in filtered_new_listing_df and i in filtered_average_listing_price_df and i in filtered_pending_ratio_df and i in filtered_permits_by_zip and i in filtered_number_of_returns_df and i in filtered_taxable_income_df and i in filtered_income_tax_df and i in filtered_mortgage_tax_df and i in filtered_charity_tax_df and i in filtered_real_estates_tax_df:\n",
@@ -1249,64 +1164,92 @@
     "        del dict_of_frames[i]\n",
     "    else:\n",
     "        strong_corr = dict_of_corr[i].index[dict_of_corr[i]['Median Listing of Sqft Pct Change'] == max_df.values[0][0]].tolist()\n",
-    "#         print(f\"{strong_corr[0]} {[i]}\")\n",
-    "        dict_of_strongest_corr[i] = strong_corr[0]\n",
+    "        print(f\"{strong_corr[0]} {[i]}\")\n",
     "        index_df = pd.DataFrame(np.array(dict_of_frames[i].index))\n",
     "        lr.fit(index_df[[0]], dict_of_frames[i][[strong_corr[0]]])\n",
     "        future = lr.predict([index_df.iloc[-1]+12])\n",
     "        lr.fit(dict_of_frames[i][[strong_corr[0]]], dict_of_frames[i]['Median Listing of Sqft Pct Change'])\n",
-    "#         print(f\"ROI:\") \n",
-    "#         print(lr.predict(future))\n",
+    "        print(f\"ROI:\") \n",
+    "        print(lr.predict(future))\n",
     "        dict_of_roi[i] = lr.predict(future)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "greatest_sorted_dict_of_roi = sorted(dict_of_roi.items(), key = operator.itemgetter(1), reverse = True)\n",
-    "least_sorted_dict_of_roi = sorted(dict_of_roi.items(), key = operator.itemgetter(1))"
+    "import operator\n",
+    "x = {1: 2, 3: 4, 4: 3, 2: 1, 0: 0}\n",
+    "sorted_x = sorted(x.items(), key=operator.itemgetter(1),reverse = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(3, 4), (4, 3), (1, 2), (2, 1), (0, 0)]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "values_of_stongest_corr = []\n",
-    "for line in dict_of_strongest_corr:\n",
-    "    values_of_strongest_corr.append(dict_of_strongest_corr[line])"
+    "sorted_x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "keys_of_corr = Counter(values_of_corr).keys() # equals to list(set(words))\n",
-    "count_of_corr = Counter(values_of_corr).values() # counts the elements' frequency"
+    "sorted_dict_of_roi = sorted(dict_of_roi.items(), key = operator.itemgetter(1), reverse = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(77011, array([0.03385541])),\n",
+       " (77020, array([0.02705338])),\n",
+       " (77027, array([0.00870845])),\n",
+       " (77023, array([0.00706455])),\n",
+       " (77008, array([0.00691096])),\n",
+       " (77002, array([0.00579749])),\n",
+       " (77005, array([0.0055603])),\n",
+       " (77009, array([0.00531868])),\n",
+       " (77007, array([0.00519829])),\n",
+       " (77026, array([0.00462537])),\n",
+       " (77098, array([0.00309937])),\n",
+       " (77003, array([0.00190372])),\n",
+       " (77006, array([0.0002646])),\n",
+       " (77004, array([-0.00069256])),\n",
+       " (77019, array([-0.00130119])),\n",
+       " (77021, array([-0.00266863])),\n",
+       " (77046, array([-0.01013335])),\n",
+       " (77030, array([-0.02466863]))]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "dict_of_count_of_corr_values = {}\n",
-    "dict_of_count_of_corr_values.update(zip(keys_of_corr, count_of_corr))"
+    "sorted_dict_of_roi"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1318,9 +1261,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:pyvizenv] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-pyvizenv-py"
   },
   "language_info": {
    "codemirror_mode": {
